# -placement-mail-analysis-system

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  check_notebook.py  check_status.py  clear_notebooks.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_pipeline.py  run_web.py  setup_env.py  update_notebook.py
.kiro/steering/: incremental-processing.md  product.md  structure.md  tech.md  workflows.md
data/: .gitkeep
phases/Phase 1/: README.md  config.example.json  data_extracting.ipynb
phases/Phase 2/: README.md  config.example.json  data_cleaning.ipynb  data_filtering.ipynb  incremental_state_management.py
phases/Phase 3/: README.md  config_manager.py  entity_structuring.ipynb
phases/Phase 4/: README.md  config_loader.py  job_prioritization.ipynb
phases/Phase 5/: Conversational_agent.ipynb  PDF_Management.ipynb  RAG_System.ipynb  README.md
phases/Phase 6/: Excel_Integrate.ipynb  README.md
web/: app.py
web/templates/: chat.html
