[project]
name = "placement-mail-analysis-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "chromadb>=1.3.7",
    "cryptography>=46.0.3",
    "fastapi>=0.124.4",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "google-genai>=1.55.0",
    "google-generativeai>=0.8.5",
    "httplib2>=0.31.0",
    "hypothesis>=6.148.7",
    "import-ipynb>=0.2",
    "ipykernel>=7.1.0",
    "ipynb>=0.5.1",
    "jinja2>=3.1.6",
    "nbconvert>=7.16.6",
    "nltk>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pip>=25.3",
    "pyopenssl>=25.3.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
]
